# Marble

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  shell.nix  vite.config.ts
browser/: run_webkit.py
host/: Cargo.toml
host/assets/: init.js  user_agent.txt
host/src/: constants.rs  main.rs
host/src/ipc/: ipc_message.rs  mod.rs  user_event.rs
host/src/ipc/request/: command_request.rs  mod.rs  proxy_request.rs
proxy/: server.cjs  server.js
proxy/uv/: uv.config.js
public/: 404.html  apps.json  qwebchannel.js  register-sw.js  styles.css  sw.js  uv.sw.js
src/: main.ts
src/apps/: About.svelte  AppStore.svelte  AppStoreLogo.svelte  Browser.svelte  Settings.svelte  SettingsIcon.svelte  Terminal.svelte  Welcome.svelte  about.ts  appStore.ts  browser.ts  registry.ts  settings.ts  terminal.ts  types.ts  welcome.ts
src/kernel/: Kernel.ts
src/kernel/services/: ProcessManager.ts  VFS.ts  WindowManager.ts  vfs.types.ts  windowManager.types.ts
src/shell/: App.svelte  AppKit.css  app.css
src/shell/auth/: Login.svelte  Setup.svelte  auth.css
src/shell/components/: Calendar.svelte  CalendarPopup.svelte  Clock.svelte  ClockDetails.svelte  ClockDetailsPopup.svelte  ContextMenu.svelte  DateTime.svelte  Desktop.svelte  Dock.svelte  Launcher.svelte  Loader.svelte  PhosphorIcon.svelte  Toaster.svelte  TodoList.svelte  Window.svelte
src/shell/store/: accountStore.ts  dateTimeStore.ts  pinnedAppsStore.ts  selectedDateStore.ts  toasterStore.ts  todoStore.ts  webAppsStore.ts
