[package]
name = "graphite-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

wry = "0.24"

tao = "0.16"

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

anyhow = "1.0"

reqwest = { version = "0.11", features = ["blocking", "json"] }

scraper = "0.13"

tokio = { version = "1", features = ["full"] }

url = "2.3"
